Fixing issue on mobile

--- a/src/CSS/landing-page.css
+++ b/src/CSS/landing-page.css
@@ -12,7 +12,7 @@ html {
     background-color: #2d2d2d;
     font-family: "Ubuntu", sans-serif;
     color: white;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 .landing-page {
